--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirect</title>
-  <meta http-equiv="refresh" content="0; URL=dashboard.html" />
+    <meta http-equiv="refresh" content="0; URL=login.html" />
+    <title>Redirecting to Login</title>
 </head>
 <body>
-  <p>Redirecting to <a href="dashboard.html">dashboard</a>...</p>
+    <p>Redirecting to <a href="login.html">login</a>...</p>
 </body>
 </html>
