--- a/dashboard.html
+++ b/dashboard.html
@@ -8,138 +8,126 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background-color: #f8f9fa;
     }
 
-    .sidebar {
-      width: 200px;
-      background-color: #111;
-      height: 100vh;
-      position: fixed;
+    .topbar {
+      background-color: #202020;
       color: white;
-      padding-top: 20px;
-    }
-
-    .sidebar img {
-      display: block;
-      margin: 0 auto 10px;
-      width: 60px;
-    }
-
-    .sidebar h2 {
-      color: #c00;
-      font-size: 16px;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .sidebar a {
-      display: block;
-      color: #fff;
       padding: 10px 20px;
-      text-decoration: none;
-    }
-
-    .sidebar a:hover {
-      background-color: #c00;
-    }
-
-    .main-content {
-      margin-left: 200px;
-      padding: 20px;
-    }
-
-    .info-bar {
-      background-color: #222;
-      color: white;
-      padding: 10px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      flex-wrap: wrap;
     }
 
-    .info-item {
+    .topbar .menu {
       display: flex;
+      gap: 20px;
+    }
+
+    .topbar .menu a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .container {
+      padding: 20px;
+    }
+
+    .student-info {
+      background-color: #343a40;
+      color: white;
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
       align-items: center;
-      gap: 8px;
-      margin: 5px 10px;
+    }
+
+    .student-info div {
+      background-color: #495057;
+      padding: 10px 15px;
+      border-radius: 5px;
       font-size: 14px;
     }
 
-    .info-item span {
-      background-color: #555;
+    .student-info .active {
+      background-color: #28a745;
       color: white;
-      padding: 4px 8px;
-      border-radius: 8px;
-    }
-
-    .alert-box {
-      background-color: #e6ffe6;
-      color: #007a00;
-      padding: 10px;
-      margin: 20px 0;
-      border: 1px solid #80d480;
-      text-align: center;
       font-weight: bold;
     }
 
     .messages {
-      margin-top: 10px;
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    .messages h3 {
-      color: #900;
-      border-bottom: 2px solid #c00;
-      padding-bottom: 5px;
+    .messages h2 {
+      color: #800000;
+      margin-bottom: 15px;
     }
 
-    .messages .msg {
-      border: 1px solid #ccc;
+    .message {
       padding: 10px;
-      margin: 5px 0;
-      background-color: #f9f9f9;
+      border-radius: 6px;
+      margin-bottom: 10px;
+      font-size: 14px;
+    }
+
+    .message.red {
+      background-color: #f8d7da;
+      color: #dc3545;
+      border-left: 5px solid #dc3545;
+    }
+
+    .message.green {
+      background-color: #d4edda;
+      color: #28a745;
+      border-left: 5px solid #28a745;
     }
   </style>
 </head>
 <body>
 
-  <div class="sidebar">
-    <img src="ciu-logo.png" alt="CIU Logo">
-    <h2>Learning Management System</h2>
-    <a href="grades.html">Grades</a>
-    <a href="profile.html">Student Profile</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="selected-courses.html">Selected Courses</a>
-    <a href="login.html">Logout</a>
+  <div class="topbar">
+    <div><img src="ciu-logo.png" alt="CIU Logo" style="height:40px;"></div>
+    <div class="menu">
+      <a href="#">Grades</a>
+      <a href="#">Student Profile</a>
+      <a href="#">Schedule</a>
+      <a href="#">Selected Courses</a>
+      <a href="#">Logout</a>
+    </div>
   </div>
 
-  <div class="main-content">
-    <div class="info-bar">
-      <div class="info-item">GPA: <span>2.9</span></div>
-      <div class="info-item">Balance: <span style="background-color: #090;">0.00 USD</span></div>
-      <div class="info-item">Student: <span>Muhammad Younes</span></div>
-      <div class="info-item">Group: <span>OM2203STen_I</span></div>
-      <div class="info-item">Status: <span style="background-color: #0c0;">Active Student</span></div>
-      <div class="info-item">Messages: <span>0</span></div>
-    </div>
-
-    <div class="alert-box">
-      You are an active student with full access to the portal.
+  <div class="container">
+    <div class="student-info">
+      <div><strong>Name:</strong> Muhammad Younes</div>
+      <div class="active">Active Student</div>
+      <div><strong>University:</strong> Caucasus International University</div>
+      <div><strong>Faculty:</strong> Dentistry</div>
+      <div><strong>Year:</strong> 2024–2025</div>
+      <div><strong>GPA:</strong> 2.9</div>
+      <div><strong>Balance:</strong> 0.00 USD</div>
     </div>
 
     <div class="messages">
-      <h3>University Messages</h3>
-      <div class="msg">New semester starts on September 2, 2025.</div>
-      <div class="msg">Exam schedule will be published soon.</div>
-      <div class="msg">Library access renewed until end of semester.</div>
-      <div class="msg">Submit lab reports by Friday.</div>
-      <div class="msg">New student ID cards available.</div>
-      <div class="msg">Dentistry conference on July 10, 2025.</div>
-      <div class="msg">Midterm exams start August 14.</div>
-      <div class="msg">Summer course applications now open.</div>
-      <div class="msg">COVID-19 safety rules updated.</div>
-      <div class="msg">Dormitory fee payment deadline extended.</div>
+      <h2>University Messages</h2>
+      <div class="message red">New semester starts on September 2, 2025.</div>
+      <div class="message red">Exam schedule will be published soon.</div>
+      <div class="message green">Library access renewed until end of semester.</div>
+      <div class="message red">Submit lab reports by Friday.</div>
+      <div class="message green">New student ID cards available.</div>
+      <div class="message green">Dentistry conference on July 10, 2025.</div>
+      <div class="message red">Midterm exams start August 14.</div>
+      <div class="message green">Summer course applications now open.</div>
+      <div class="message red">COVID-19 safety rules updated.</div>
+      <div class="message green">Dormitory fee payment deadline extended.</div>
     </div>
   </div>
 
