--- a/grades.html
+++ b/grades.html
@@ -37,7 +37,12 @@
     }
   </style>
 </head>
-<body>
+<<script>
+  const isLoggedIn = localStorage.getItem("loggedInUser");
+  if (!isLoggedIn) {
+    window.location.href = "login.html";
+  }
+</script>>
   <h1>Student Grades</h1>
   <table>
     <tr>
