--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,12 @@
     }
   </style>
 </head>
-<body>
+<<script>
+  const isLoggedIn = localStorage.getItem("loggedInUser");
+  if (!isLoggedIn) {
+    window.location.href = "login.html";
+  }
+</script>>
 
   <header>
     <img src="ciu-logo.png" alt="CIU Logo">
