--- a/grades.html
+++ b/grades.html
@@ -37,11 +37,7 @@
     }
   </style>
 </head>
-<<script>
-  const isLoggedIn = localStorage.getItem("loggedInUser");
-  if (!isLoggedIn) {
-    window.location.href = "login.html";
-  }
+<body>
 </script>>
   <h1>Student Grades</h1>
   <table>
