--- a/dashboard.html
+++ b/dashboard.html
@@ -89,11 +89,7 @@
     }
   </style>
 </head>
-<<script>
-  const isLoggedIn = localStorage.getItem("loggedInUser");
-  if (!isLoggedIn) {
-    window.location.href = "login.html";
-  }
+<body>
 </script>>
 
   <!-- المعلومات الأفقية -->
