--- a/profile.html
+++ b/profile.html
@@ -53,11 +53,7 @@
     }
   </style>
 </head>
-<<script>
-  const isLoggedIn = localStorage.getItem("loggedInUser");
-  if (!isLoggedIn) {
-    window.location.href = "login.html";
-  }
+<body>
 </script>>
 
   <header>
