--- a/schedule.html
+++ b/schedule.html
@@ -57,11 +57,7 @@
     }
   </style>
 </head>
-<<script>
-  const isLoggedIn = localStorage.getItem("loggedInUser");
-  if (!isLoggedIn) {
-    window.location.href = "login.html";
-  }
+<body>
 </script>>
 
   <header>
