--- a/selected-courses.html
+++ b/selected-courses.html
@@ -95,10 +95,6 @@
     </tr>
 
   </table>
-</<script>
-  const isLoggedIn = localStorage.getItem("loggedInUser");
-  if (!isLoggedIn) {
-    window.location.href = "login.html";
-  }
+<body>
 </script>>
 </html>
