--- a/dashboard.html
+++ b/dashboard.html
@@ -7,114 +7,116 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
+      font-family: Arial, sans-serif;
+      background-color: #f8f8f8;
     }
 
-    .top-info {
+    .sidebar {
+      width: 200px;
+      height: 100vh;
+      background-color: #ffffff;
+      padding: 20px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      border-right: 1px solid #ccc;
+    }
+
+    .sidebar img {
+      width: 80px;
+      margin-bottom: 30px;
+    }
+
+    .sidebar a {
+      display: block;
+      color: #333;
+      text-decoration: none;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+
+    .sidebar a:hover {
+      color: #800000;
+    }
+
+    .main-content {
+      margin-left: 220px;
+      padding: 20px;
+    }
+
+    .student-info {
       display: flex;
       flex-wrap: wrap;
-      background-color: #1a1a1a;
-      color: white;
-      padding: 10px 20px;
-      justify-content: space-between;
+      gap: 10px;
+      background-color: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
     }
 
-    .info-box {
-      margin: 5px;
-      background-color: #2e2e2e;
-      padding: 8px 14px;
+    .info-item {
+      background-color: #f0f0f0;
+      padding: 8px 12px;
       border-radius: 5px;
       font-size: 14px;
     }
 
-    .info-box.green {
+    .info-item.green {
       background-color: #28a745;
-      color: white;
-      font-weight: bold;
+      color: #fff;
     }
 
-    .nav-bar {
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      padding: 8px 0;
+    .messages {
+      background-color: #ffffff;
+      padding: 15px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
 
-    .nav-bar a {
-      color: white;
-      text-decoration: none;
-      margin: 10px 15px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-
-    .nav-bar a:hover {
-      color: #ff3333;
-    }
-
-    .container {
-      padding: 20px;
-    }
-
-    .messages-box {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      color: #990000;
-      margin-bottom: 15px;
+    .messages h2 {
+      color: #800000;
     }
 
     .message {
-      padding: 10px 15px;
-      border-radius: 5px;
-      margin-bottom: 10px;
       border: 1px solid #ccc;
-      background-color: #f0f0f0;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      font-size: 14px;
     }
 
     .message.red {
       color: #cc0000;
-      font-weight: bold;
     }
 
     .message.green {
-      color: #28a745;
-      font-weight: bold;
+      color: #006600;
     }
   </style>
 </head>
 <body>
-</script>>
-
-  <!-- المعلومات الأفقية -->
-  <div class="top-info">
-    <div class="info-box"><strong>Name:</strong> Muhammad Younes</div>
-    <div class="info-box green">Active Student</div>
-    <div class="info-box"><strong>University:</strong> Caucasus International University</div>
-    <div class="info-box"><strong>Faculty:</strong> Dentistry</div>
-    <div class="info-box"><strong>Year:</strong> 2024–2025</div>
-    <div class="info-box"><strong>GPA:</strong> 2.9</div>
-    <div class="info-box"><strong>Balance:</strong> 0.00 USD</div>
-  </div>
-
-  <!-- شريط التنقل -->
-  <div class="nav-bar">
+  <div class="sidebar">
+    <img src="ciu-logo.png" alt="CIU Logo" />
     <a href="grades.html">Grades</a>
     <a href="profile.html">Student Profile</a>
     <a href="schedule.html">Schedule</a>
     <a href="selected-courses.html">Selected Courses</a>
-    <a href="login.html">Logout</a>
+    <a href="login.html" onclick="localStorage.removeItem('loggedInUser')">Logout</a>
   </div>
 
-  <!-- الرسائل -->
-  <div class="container">
-    <div class="messages-box">
+  <div class="main-content">
+    <div class="student-info">
+      <div class="info-item"><strong>Name:</strong> Muhammad Younes</div>
+      <div class="info-item green"><strong>Active Student</strong></div>
+      <div class="info-item"><strong>University:</strong> Caucasus International University</div>
+      <div class="info-item"><strong>Faculty:</strong> Dentistry</div>
+      <div class="info-item"><strong>Year:</strong> 2024–2025</div>
+      <div class="info-item"><strong>GPA:</strong> 2.9</div>
+      <div class="info-item"><strong>Balance:</strong> 0.00 USD</div>
+    </div>
+
+    <div class="messages">
       <h2>University Messages</h2>
       <div class="message red">New semester starts on September 2, 2025.</div>
       <div class="message red">Exam schedule will be published soon.</div>
@@ -123,11 +125,13 @@
       <div class="message green">New student ID cards available.</div>
       <div class="message green">Dentistry conference on July 10, 2025.</div>
       <div class="message red">Midterm exams start August 14.</div>
-      <div class="message green">Summer course applications now open.</div>
-      <div class="message red">COVID-19 safety rules updated.</div>
-      <div class="message red">Dormitory fee payment deadline extended.</div>
     </div>
   </div>
 
+  <script>
+    if (!localStorage.getItem("loggedInUser")) {
+      window.location.href = "login.html";
+    }
+  </script>
 </body>
 </html>
